feat: correct typo and translate comment

--- a/README.yml
+++ b/README.yml
@@ -14,7 +14,7 @@ quick_start: |
   ```hcl
   batch_parameters = {
       "00" = {
-        # Cantidad de cpu a utilizar por los compute environments
+        # Amount of CPU to use for compute environments
         #max_vcpus = 4 # Default: 4
       }
     }
@@ -112,7 +112,7 @@ input_table: |
   | instance_iam_role_tags | A map of additional tags to add to the IAM role created | `map` | `{}` | no |
   | instance_iam_role_use_name_prefix | Determines whether the IAM role name (instance_iam_role_name) is used as a prefix | `string` | `true` | no |
   | job_queues | Map of job queue and scheduling policy definitions to create | `any` | `{}` | no |
-  | service_iam_role_additional_policies | Additional policies to be added to the IAM role | `null` | `{}` | no |
+  | service_iam_role_additional_policies | Additional policies to be added to the IAM role | `map` | `{}` | no |
   | service_iam_role_description | Batch service IAM role description | `string` | `null` | no |
   | service_iam_role_name | Batch service IAM role name | `string` | `null` | no |
   | service_iam_role_path | Batch service IAM role path | `string` | `null` | no |
